--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
 "app_id" : "moobile",
-"versioncode" : "0001",
-"versionname" : "0.0001",
+"versioncode" : "0002",
+"versionname" : "0.0002",
 "cache_expiration_time" : 300000,
 "default_lang" : "en",
-"languages": {"en": "English", "es": "Español", "es_mx": "Español - México", "eu": "Euskara", "fa": "فارسی", "fr" : "Français", "he" : "עברית", "hu": "magyar", "it": "Italiano", "ja": "日本語","nl": "Nederlands", "pt_br": "Português - Brasil", "ru": "Русский", "sv": "Svenska", "tr" : "Türkçe", "zh_cn" : "简体中文", "zh_tw" : "正體中文"},
+"languages": {"en": "English", "es": "Español", "es_mx": "Español - México"},
 "plugins" : ["contents","url", "page", "resource"],
 "wsservice" : "moodle_mobile_app",
 "wsextservice" : "local_mobile",
