--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
 "cache_expiration_time" : 300000,
 "default_lang" : "en",
 "languages": {"en": "English", "es": "Español", "es_mx": "Español - México"},
-"plugins" : ["contents","url", "page", "resource"],
+"plugins" : ["contents","url", "page", "resource","barker"],
 "wsservice" : "moodle_mobile_app",
 "wsextservice" : "local_mobile",
 "presets" : {"url": "http://ec2-52-39-65-199.us-west-2.compute.amazonaws.com/moodle", "username": ""},
